--- a/index.html
+++ b/index.html
@@ -2,17 +2,84 @@
 <html>
     <head>
         <title>Tyler's Amazing Website</title>
+        <style>
+            body {
+                background: rgb(125, 198, 205);
+                color: rgb(45, 45, 45);
+                padding: 10px;
+                font-family: arial;
+            }
+            #all-contents {
+                max-width: 800px;
+                margin: auto;
+            }
+
+            /* navigation menu */
+            nav {
+                background: rgb(153, 22, 176);
+                margin: 0 auto;
+                margin-bottom: 20px;
+                display: flex;
+                padding: 10px;
+            }
+            nav h1 {
+                display: flex;
+                align-items: center;
+                color: rgb(50, 199, 65);
+                flex: 1;
+                margin: 0;
+            }
+            nav ul {
+                list-style-image: none;
+            }
+            nav li {
+                display: inline-block;
+                padding: 0 10px;
+            }
+            nav a {
+                text-decoration: none;
+                color: rgb(53, 197, 53);
+            }
+
+            /* main container area beneath menu */
+            main {
+                background: rgb(232, 188, 66);
+                display: flex;
+            }
+            .sidebar {
+                margin-right: 25px;
+                padding: 10px;
+            }
+            .sidebar img {
+                width: 200px;
+            }
+            .content {
+                flex: 1;
+                padding: 15px;
+            }
+            h2, h3 {
+                margin: 0px
+            }
+        </style>
     </head>
 
     <body>
         <div id="all-contents">
             <nav>
-
+                <h1>Tyler's Glorious Website</h1>
+                <ul>
+                    <li>
+                        <a href="index.html"> Home </a>
+                    </li>
+                    <li>
+                        <a href="portfolio.html"> Portfolio </a>
+                    </li>
+                </ul>
             </nav>
 
             <main>
                 <div class="sidebar">
-                    
+                    <img src="https://scontent-atl3-2.xx.fbcdn.net/v/t39.30808-6/428600104_903581708444057_6065495412986901873_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=f727a1&_nc_ohc=K5szmoi88P8Q7kNvgFrVL0V&_nc_ht=scontent-atl3-2.xx&cb_e2o_trans=t&oh=00_AYAcTbhKCa7IqJYu1hXqpbrmVwsevhGmt2h3tsktELRs9A&oe=668FE8FE">
                 </div>
 
                 <div class="content">
