Matched colors between index.html & portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,15 +23,17 @@
 
             /* navigation menu */
             nav {
-                background: rgb(239, 80, 41);
+                background: rgb(153, 22, 176);
                 margin: 0 auto;
+                margin-bottom: 20px;
                 display: flex;
                 padding: 10px;
+                border-radius: 10px;
             }
             nav header {
                 display: flex;
                 align-items: center;
-                color: rgb(255, 255, 255);
+                color: rgb(50, 199, 65);
                 flex: 1;
             }
             nav ul {
@@ -43,12 +45,12 @@
             }
             nav a {
                 text-decoration: none;
-                color: #fff;
+                color: rgb(53, 197, 53);
             }
 
             /* main container area beneath menu */
             main {
-                background: rgb(245, 238, 219);
+                background: rgb(232, 188, 66);
                 display: flex;
             }
             .content {
