--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 margin-bottom: 20px;
                 display: flex;
                 padding: 10px;
+                border-radius: 10px;
             }
             nav h1 {
                 display: flex;
